# picnamion

./: .gitignore  Cargo.toml  Dockerfile.dev  README-coverage.txt  README-testing.txt  README.md  README.txt  make_test_image.sh  my_exiftool.sh  run.sh
settings/: prod.json5
src/: main.rs
test/: test.bats
test_data/: 1745810247.png.prefix  1745810247.png.time  1751532823645_80482C5526D4131751532823.mp4.prefix  1751532823645_80482C5526D4131751532823.mp4.time  2012-02-13 19.34.36.jpg.time  4_hours_apart.jpg.time  80482C38EA21_1745805915377.jpg.prefix  80482C38EA21_1745805915377.jpg.time  File_Telegram_librera-reader-chat_Screenshot_20240802-000330.png.prefix  File_Telegram_librera-reader-chat_Screenshot_20240802-000333.png.prefix  File_Telegram_librera-reader-chat_Screenshot_20240802-000344.png.prefix  IMG_20130101_153337.jpg.prefix  IMG_20130101_153337.jpg.time  IMG_20250410_0844363.jpg.time  IMG_20250411_1144275.jpg.prefix  IMG_20250411_1144333.jpg.prefix  IMG_20250411_1144363.jpg.prefix  IMG_20250411_1444363.jpg.prefix  IMG_20250411_1444363.jpg.time  IMG_MMS_no-name_image000000.jpg.time  IMG_MMS_no-name_photo_2025-03-31_10-02-40.jpg.prefix  IMG_MMS_sent_2025-09-03_13-14-11_from_19165366484_null.jpg.prefix  IMG_MMS_sent_2025-09-03_13-14-11_from_19165366484_null.jpg.time  IMG_MMS_sent_2025-12-02_10-09-58_from_nope_filename_null.jpg.time  IMG_MMS_unknown_null  IMG_Telegram_no-name_5159182035728838327_121.jpg.prefix  MOV_Telegram_sent_2024-08-26_17-55-30_from_channel_filename_WhatsApp Video 2024-08-26 at 17.52.24_ca2620f8.mp4.time  PXL_20250709_002352285.jpg.prefix  (+19 more)
